<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flippy Pairs</string>

    <string name="activity_lobby_title">Game Lobby</string>
    <string name="activity_host_game_title">Host game</string>
    <string name="activity_join_game_title">Join game</string>
    <string name="activity_about_title">About</string>

    <string name="missing_wifi_alert_title">Missing Wifi connection</string>
    <string name="missing_wifi_alert">
        In order to enjoy multiplayer games you have to be connected to
        a Wi-Fi network. If there is no network available you can also create your own hotspot. Do
        you want to open Wi-Fi settings?
    </string>

    <string name="menu_test_game">Test Game</string>
    <string name="submit_id">Will they match?</string>

    <string name="default_game_name">AwesomeGame</string>

    <string name="activity_main_btn_host_game">Host Game</string>
    <string name="activity_main_btn_join_game">Join Game</string>
    <string name="activity_main_help">Help</string>
    <string name="activity_main_about">About</string>

    <string name="activity_host_game_start">Start hosting</string>
    <string name="activity_host_game_player_count">Number of players</string>
    <string name="activity_host_game_name_description">Game Name</string>
    <string name="activity_host_game_players_count_title">Number of players</string>
    <string name="activity_host_game_players_count_players">players</string>
    <string name="activity_host_game_pairs_count_title">Number of different pairs</string>
    <string name="activity_host_game_pairs_count_pairs">pairs</string>
    <string name="activity_host_game_game_name_title">Game Name</string>
    <string name="activity_host_game_game_name_hint">Your Game Name</string>

    <string name="service_host_starting_title">Game starting</string>
    <string name="service_host_start_message">Distributed memory game is about to be hosted …</string>
    <string name="service_host_running_title">Game Running</string>
    <string name="service_host_running_message">You are hosting a Flippy Pairs game!</string>
    <string name="service_host_running_stop">Stop game</string>

    <string name="activity_lobby_start_game">Start game</string>
    <string name="activity_lobby_connected_clients">Connected clients</string>
    <string name="activity_lobby_searching">Searching for clients …</string>
    <string name="activity_lobby_host_client">%1$s (you)</string>
    <string name="activity_lobby_back_pressed_title">Host is running</string>
    <string name="activity_lobby_back_pressed_message">Do you want to stop the current game?</string>
    <string name="activity_lobby_starting_error_title">Unable to start host</string>
    <string name="activity_lobby_starting_error_duplicate_service_message">Is another game with the same name running in your area?</string>
    <string name="activity_lobby_starting_error_unknown_message">There was an unknown error while starting the host. Sorry, that\'s all we know.</string>

    <string name="activity_game_current_player">%1$s\'s turn</string>
    <string name="activity_game_waiting_title">Waiting for host</string>
    <string name="activity_game_waiting_message">Waiting for host to start the game. Maybe giving him a cookie will make him work faster?</string>
    <string name="activity_game_finish_title">Game Over</string>
    <string name="activity_game_finish_winner">%1$s has won the game!</string>
    <string name="activity_game_finish_draw">It\'s a draw!</string>
    <string name="activity_game_finish_points">%1$s: %2$d points</string>
    <string name="activity_game_back_pressed_title">Game is running</string>
    <string name="activity_game_back_pressed_message">Do you want to stop the current game?</string>
    <string name="activity_game_host_error_title">Lost connection to host</string>
    <string name="activity_game_host_error_message">There seems to be a problem reaching the host. Has he or another player left the game?</string>

    <string name="activity_join_game_games">Available games</string>
    <string name="activity_join_game_searching">Searching for games …</string>

    <string name="btn_stop">Stop</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_back">Back</string>

    <string name="app_description_title">Flippy Pairs</string>
    <string name="app_description_text">
        Enjoy a classic game of memory by connecting several smartphones and tablets to form a giant playing field.\n
        Guaranteed fun for all ages!\n
        \n
        Developed in January 2015 by FauDroids
    </string>
    <string name="app_description_faudroids">
        FauDroids are:\n
        \n
        Philipp Eichhorn\n
        Simon Hofmann\n
        Julian König\n
        \n
        <a href="faudroids.org">faudroids.org</a>
    </string>
    <string name="app_description_credits">
        &lt;p&gt;
        A special thanks goes out to &lt;a href=&quot;https://robohash.org/&quot;&gt;robohash.org&lt;/a&gt; for providing us with lovely robot images!
        &lt;/p&gt;
        &lt;p&gt;
        And of course a big applause to all the awesome open source libraries out there:&lt;br&gt;
        &lt;a href=&quot;https://square.github.io/dagger/&quot;&gt;Dagger&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;http://jakewharton.github.io/butterknife/&quot;&gt;Butter Knife&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://github.com/google/guava&quot;&gt;Guava&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;http://wiki.fasterxml.com/JacksonHome&quot;&gt;Jackson&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://github.com/zxing/zxing/&quot;&gt;zxing&lt;/a&gt; and &lt;a href=&quot;https://github.com/journeyapps/zxing-android-embedded&quot;&gt;zxing-android-embedded&lt;/a&gt;
        &lt;/p&gt;
        &lt;p&gt;
        This app itself is Open Source too and can be found at &lt;a href=&quot;https://github.com/FauDroids/DistributedMemory&quot;&gt;GitHub&lt;/a&gt;.
        &lt;/p&gt;
    </string>

    <string name="activity_help_title">Help</string>
    <string name="activity_help_host_title">Hosting a game</string>
    <string name="activity_help_join_title">Joining a game</string>
    <string name="activity_help_troubleshooting_title">Troubleshooting</string>

    <string name="activity_help_host_text">1. Select "Host game" from main menu\n
        \n
        2. Set game preferences by clicking the respective items, or just keep the defaults, and tap the
        "Start hosting" button.\n
        \n
        3. Now you can either wait for clients to connect or start a game using only your device by pressing the "Start game" button\n
        \n
        4. Game on!
    </string>
    <string name="activity_help_join_text">1. Select "Join game" from main menu\n
        \n
        2. On the next screen you will be presented a list of available games.\n
        \n
        3 Click the game name you want to join.\n
        \n
        4. Game on!
    </string>
    <string name="activity_help_troubleshooting_text">Q: I can\'t find any games, what\'s wrong?\n
        \n
        A: Some Wi-Fi networks are funny like that. Try directly connecting to a game by clicking the small help message at the bottom of the screen.\n
        \n
        Q: There is no Wi-Fi available, what now?\n
        \n
        A: Try creating your own Wi-Fi hotspot in the Wi-Fi settings.
    </string>

    <string name="version">Version %1$s</string>

    <string name="join_game_help">Having trouble connecting? Click me!</string>
    <string name="join_game_help_title">Having trouble?</string>
    <string name="join_game_help_host_instructions1">You can try helping others discover your game by letting them scan the following QR code. Clients can find a scanner under \"Join Game\"</string>
    <string name="join_game_help_host_instructions2">Tell others to scan this code to join your game.</string>
    <string name="join_game_host_host_title">Host Code</string>
    <string name="join_game_help_client_error">Failed to read host code</string>
    <string name="join_game_help_client_instructions1">If the game you\'re looking for does not appear in the list you can try joining directly by scanning the QR on the host screen.</string>
    <string name="join_game_help_client_instructions2">Scan the code that is shown on the host screen!</string>

</resources>
