<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerVertical="true">

    <include layout="@layout/background"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/activity_help_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MenuButton"
            android:text="@string/activity_help_host_title"/>

        <Button
            android:id="@+id/activity_help_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MenuButton"
            android:text="@string/activity_help_join_title"/>

        <Button
            android:id="@+id/activity_help_troubleshooting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MenuButton"
            android:text="@string/activity_help_troubleshooting_title"/>

    </LinearLayout>

</RelativeLayout>