<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MainLayout">

        <Button
            style="@style/MenuButton"
            android:id="@+id/start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_lobby_start_game" />

        <TextView
            android:id="@+id/join_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HelpJoinGameFont"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/join_game_help"/>

        <LinearLayout
            android:id="@+id/client_list"
            android:padding="@dimen/text_background_padding"
            android:layout_below="@id/start_game"
            android:layout_above="@id/join_help"
            android:background="@drawable/text_background"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/DefaultFont"
                android:layout_gravity="center_horizontal"
                android:id="@+id/text_client_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_lobby_connected_clients"/>

            <include layout="@layout/divider"/>

            <ListView
                android:id="@+id/peers_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/empty"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/progressbar"/>

                    <TextView
                        style="@style/DefaultFont"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_lobby_searching"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
