<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerVertical="true">

    <include layout="@layout/background"/>

    <Button
        style="@style/DefaultFont"
        android:id="@+id/activity_about_back"
        android:background="@drawable/text_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        android:text="Back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_below="@id/activity_about_back">

        <RelativeLayout
            android:id="@+id/relative_layout_about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/text_background">

            <TextView
                android:id="@+id/about_dialog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:gravity="center"
                style="@style/DefaultFont"
                android:text="@string/app_description_text"/>


            <TextView
                android:id="@+id/activity_about_faudroids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:layout_below="@id/about_dialog_text"
                android:autoLink="web"
                style="@style/DefaultFont"
                android:text="@string/app_description_faudroids"/>

            <TextView
                android:id="@+id/activity_about_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:layout_below="@id/activity_about_faudroids"
                android:autoLink="web"
                style="@style/DefaultFont"
                android:text="@string/app_description_credits"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>