<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MainLayout">

        <TextView
            android:id="@+id/join_help"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            style="@style/HelpJoinGameFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/join_game_help"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@id/join_help"
            android:background="@drawable/text_background"
            android:padding="@dimen/text_background_padding">

            <TextView
                style="@style/DefaultFont"
                android:id="@+id/text_client_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_join_game_games"/>

            <include layout="@layout/divider"/>

            <ListView
                android:id="@android:id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout android:id="@android:id/empty"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <include layout="@layout/progressbar"/>

                    <TextView
                        style="@style/DefaultFont"
                        android:layout_marginLeft="20sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_join_game_searching"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>